# CMake-Practice-zh-CN

./: README.md  _sidebar.md  acquaintance.md  better-hello-world.md  common-directives.md  common-var.md  foreword.md  hello-world.md  index.html  install.md  module.md  static-and-dynamic.md  the-use-of-lib-and-header-file.md
cmake/t1/: CMakeLists.txt
cmake/t2/: CMakeLists.txt
cmake/t2/src/: CMakeLists.txt  main.c
cmake/t3/: CMakeLists.txt
cmake/t3/lib/: CMakeLists.txt  hello.c
cmake/t4/: CMakeLists.txt
cmake/t4/src/: CMakeLists.txt
cmake/t5/: CMakeLists.txt
cmake/t5/src/: CMakeLists.txt  main.c
cmake/t6/: CMakeLists.txt
cmake/t6/cmake/: FindHELLO.cmake
cmake/t6/src/: CMakeLists.txt  main.c
